[package]
name        = "flo_ui"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Implementation-free user interface description library"

[dependencies]
flo_binding     = { git = "https://github.com/Logicalshift/flo_binding", version = "2.0" }
flo_canvas      = { path = "../canvas", version = "0.2" }
flo_stream      = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
desync          = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }

serde           = "1.0"
serde_derive    = "1.0"
serde_json      = "1.0"
modifier        = "0.1"
futures         = { version = "0.3", features = ["thread-pool"] }
png             = "0.16"
lazy_static     = "1.2"
bytes           = "0.5"
itertools       = "0.9"
