[package]
name        = "flo_ui_files"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Routines for implementing user interfaces that manipulate files"

[dependencies]
flo_ui      = { path = "../ui", version = "^0.1.0" }
flo_stream  = { git = "https://github.com/Logicalshift/flo_stream", version = "^0.1.0" }
flo_canvas  = { path = "../canvas", version = "^0.1.0" }
flo_binding = { path = "../binding", version = "^0.1.0" }

desync      = { version = "0.2", git = "https://github.com/logicalshift/desync", branch = "develop" }
rusqlite    = { version = "0.14", features = ["bundled"] }
dirs        = "1.0"
uuid        = { version = "0.6", features = [ "v4" ] }
lazy_static = "1.0"
futures     = "0.1"
