[package]
name        = "flo_ui_files"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Routines for implementing user interfaces that manipulate files"

include     = [ "sql/**/*" ]

[dependencies]
flo_ui      = { path = "../ui", version = "^0.1.0" }
flo_stream  = { git = "https://github.com/Logicalshift/flo_stream", version = "0.2" }
flo_canvas  = { path = "../canvas", version = "^0.1.0" }
flo_binding = { path = "../binding", version = "^0.1.0" }
flo_logging = { path = "../logging", version = "0.1" }

desync      = "0.3"
rusqlite    = { version = "0.15", features = ["bundled"] }
dirs        = "1.0"
uuid        = { version = "0.7", features = [ "v4" ] }
lazy_static = "1.0"
futures     = "0.1"
