[package]
name        = "flo_ui_files"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Routines for implementing user interfaces that manipulate files"

include     = [ "sql/**/*" ]

[dependencies]
flo_ui      = { path = "../ui", version = "0.2" }
flo_stream  = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
flo_canvas  = { path = "../canvas", version = "0.2" }
flo_binding = { git = "https://github.com/Logicalshift/flo_binding", version = "2.0" }
flo_logging = { path = "../logging", version = "0.2" }

desync      = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }
rusqlite    = { version = "0.23", features = ["bundled"] }
dirs        = "3.0"
uuid        = { version = "0.8", features = [ "v4" ] }
lazy_static = "1.2"
futures     = "0.3"
