[package]
name        = "flo_static_files"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Static files for FlowBetween's HTTP UI"

include     = [ "Cargo.toml", "src/**/*", "css/**/*", "fonts/**/*", "html/**/*", "js/**/*", "png/**/*", "svg/**/*" ]

[dependencies]
sha2        = "0.9"
