[package]
name        = "flo_ui_files"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Routines for implementing user interfaces that manipulate files"

include     = [ "sql/**/*" ]

[dependencies]
flo_ui      = "0.2"
flo_stream  = "0.7"
flo_canvas  = "0.4"
flo_binding = "2.0"
flo_logging = "0.2"

desync      = "0.9"
rusqlite    = { version = "0.27", features = ["bundled"] }
dirs        = "3.0"
uuid        = { version = "0.8", features = [ "v4" ] }
lazy_static = "1.2"
futures     = "0.3"
