[package]
name                = "flo_commands"
version             = "0.2.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
repository          = "https://github.com/Logicalshift/flowbetween"
description         = "Scripting control of FlowBetween"
include             = [ "Cargo.toml", "LICENSE", "src/**/*", "png/**/*" ]

[dependencies]
flo_stream          = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
flo_curves          = { git = "https://github.com/Logicalshift/flo_curves", version = "0.4" }
flo_animation       = { path = "../../animation", version = "0.2" }
flo_sqlite_storage  = { path = "../../sqlite_storage", version = "0.1" }
flo_canvas          = { path = "../../canvas", version = "0.2" }
flo_ui_files        = { path = "../../ui_files", version = "0.2" }
desync              = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }

futures             = "0.3"
itertools           = "0.9"