[package]
name                = "flo_commands"
version             = "0.2.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
repository          = "https://github.com/Logicalshift/flowbetween"
description         = "Scripting control of FlowBetween"
include             = [ "Cargo.toml", "LICENSE", "src/**/*", "png/**/*" ]

[dependencies]
flo_stream          = "0.7"
flo_curves          = "0.6"
flo_animation       = "0.2"
flo_sqlite_storage  = "0.1"
flo_canvas          = "0.4"
flo_ui_files        = "0.2"
desync              = "0.9"

futures             = "0.3"
itertools           = "0.9"
