[package]
name            = "flo_cocoa_pipe"
version         = "0.2.0"
edition         = "2018"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
repository      = "https://github.com/Logicalshift/flowbetween"
description     = "Pipes user interface operations between flo_ui and flo_cocoa_ui"

[dependencies]
flo_ui      = { path = "../../ui", version = "0.2" }
flo_stream  = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
flo_canvas  = { path = "../../canvas", version = "0.2" }

futures     = "0.3"
itertools   = "0.9"
objc        = "0.2"
num-traits  = "0.2"
num-derive  = "0.2"
